--- a/defense.tex
+++ b/defense.tex
@@ -3,7 +3,7 @@
 \def\gridopacity{100}
 \def\gridopacity{0}
 
-\usepackage{multimedia}
+%\usepackage{multimedia}
 
 % see http://tex.stackexchange.com/a/24491
 % for how to use enumitem with beamer
@@ -100,6 +100,12 @@
 \author{Christopher M. Dellin}
 \date{August 22, 2016}
 
+\institute{Thesis Committee Members:\\
+Siddhartha Srinivasa, Chair\\
+Anthony Stentz\\
+Maxim Likhachev\\
+Lydia Kavraki, Rice University}
+
 \begin{document}
 
 \begin{frame}[plain]
@@ -110,17 +116,11 @@
 \end{frame}
 
 \input{defense-p0-intro}
-
 \input{defense-p1-utility}
-
 \input{defense-p2-lazysp}
-
 \input{defense-p3-ibid}
-
 \input{defense-p4-utility-results}
-
 \input{defense-p5-family}
-
 \input{defense-p6-conclusion}
 
 {
@@ -130,7 +130,5 @@
 }
 
 \input{defense-p7-backup}
-
-%\input{proptalk-backup}
 
 \end{document}
