--- a/defense-p1-utility.tex
+++ b/defense-p1-utility.tex
@@ -116,7 +116,7 @@
 
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \only<1>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawempty}};}
+      %\only<1>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawempty}};}
       \only<2>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawaxes}};}
       \only<3>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawa}};}
       \only<4>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawab}};}
@@ -125,9 +125,9 @@
       \only<7-8>{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawabxstarcd}};}
       \only<9->{\node at (2.75,5.5) {\includegraphics{build/pvx-graph-build,drawabxstarcdutility}};}
 
-      \only<3->{
+      \only<1->{
       \node[fill=blue!5,draw=blue!10,rounded corners,align=center,anchor=north,minimum width=5cm] at (8.5,7.0) {
-         \only<3>{$A_1$: a planner invocation}
+         \only<1-3>{$A_1$: a planner invocation}
          \only<4->{$A_1, A_2$: planner invocations}
          \only<6->{\\ $A_3$: an anytime planner}
          \only<7->{\\ $A_4$: a parameterized planner}};
@@ -274,7 +274,7 @@
       \end{minipage}};
       }
 
-      \only<1-3>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,start}};}
+      \only<1-4>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,start}};}
       \only<5-6>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatesa}};}
       \only<7-8>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidatea}};}
       \only<9-10>{\node at (3.5,2.0) {\includegraphics{build/cspace-utility-intro,candidateaevaled}};}
