--- a/figs/multistep-prescribed/workcell-g1ll-lemuronly.tex
+++ b/figs/multistep-prescribed/workcell-g1ll-lemuronly.tex
@@ -36,14 +36,14 @@
 
    % incbi results
    \addplot
-      plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5},
+      plot[color=black,solid,thick,mark options={color=blue},mark options={scale=0.5},
          error bars/.cd,x dir=both,x explicit,y dir=both,y explicit]
       table[x=python-totaltime-finmean,y=path-length-finmean,
          x error expr=1.96*\thisrow{python-totaltime-stderrfinmean},
          y error expr=1.96*\thisrow{path-length-stderrfinmean}]
       {data/multistep-prescribed/stats-byparam-workcell-lemur-incbi-haltonoffdens10000,1.0-lambda.txt};
    \addplot
-      plot[color=green!70!black,solid,mark options={color=blue},mark options={scale=0.5},
+      plot[color=blue,solid,thick,mark options={color=blue},mark options={scale=0.5},
          error bars/.cd,x dir=both,x explicit,y dir=both,y explicit]
       table[x=python-totaltime-finmean,y=path-length-finmean,
          x error expr=1.96*\thisrow{python-totaltime-stderrfinmean},
